--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,14 @@
 
 <div class="container">
-	<div id="left_container">
+	<div class="top_container">
 		<%=image_tag("smartify_logo.png")%>
+		<div id="color_box_container">
+			<div id ="color_box_left" class="color_box"></div>
+			<div id ="color_box_middle" class="color_box"></div>
+			<div id ="color_box_right" class="color_box"></div>
+		</div>
+	</div>
+	<div id="left_container">
 		<div id="traffic_sources_container" class="sub_container">
 		<h3>Traffic Sources</h3>
 		  <div id="web_ad_traffic_source" class="traffic_source">
@@ -91,8 +98,35 @@
 		  </div>
 		  <div id="conversion_rate_container" class="conversion_sub_container">
 		    <p>Conversion Rate:</p> 
-		    <input id="conversion_rate" type="number" value="35">
+		    <input id="conversion_rate" type="number" value="35.00">
 		  </div>
+		</div>
+		<div id="viral_conversion_main_container" class="sub_container">
+			<h3>Viral Conversion Rate (VCR)</h3>
+				<div id="viral_container_top">
+				  <span id="viral_conversion_container" class="viral_conversion_sub_container">
+				    <p class="viral_conversion_label">Viral Conversion Rate</p>
+				    <input id="viral_conversion_rate" class="viral_conversion_input" type="number" value="5.0">
+				  </span>
+				  <span id="visitors_container" class="viral_conversion_sub_container">
+				    <p class="viral_conversion_label">Viral Visitors</p>
+				    <input id="viral_visitors" class="viral_conversion_input" type="number" value="17500">
+				  </span>
+				  <span id="participants_container" class="viral_conversion_sub_container">
+				    <p class="viral_conversion_label">Viral Participants</p> 
+				    <input id="viral_participants" class="viral_conversion_input" type="number" value="6125">
+				  </span>
+			  </div>
+			  <div id="viral_container_bottom">
+				  <span id="after_vcr_visitors_container" class="viral_conversion_sub_container">
+				    <p class="viral_conversion_label">Total Visitors After VCR</p> 
+				    <input id="after_vcr_visitors" class="viral_conversion_input" type="number" value="35">
+				  </span>
+				  <span id="after_vcr_participants_container" class="viral_conversion_sub_container">
+				    <p class="viral_conversion_label">Total Participants After VCR</p> 
+				    <input id="after_vcr_participants" class="viral_conversion_input" type="number" value="35">
+				  </span>
+			  </div>
 		</div>
 	  <div id="actions_container" class="sub_container">
 	    <h3>Actions</h3>
