--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -53,7 +53,7 @@ input {
 }
 
 .color_box {
-	height: 20px;
+	height: 30px;
 	width: 290px;
 	display: inline-block;
 	margin: 0;
@@ -244,7 +244,7 @@ input {
 /* Calculator Section */
 
 #roi_per_action_container {
-	padding: 1em;
+	padding-left: 1em;
 }
 
 #roi_per_action_container div#calculator_heading {
